5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1643_869.log
== TEST (2019-04-10 22:20:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
preco=float(input("leia o preco sem desconto:"))
if ()
-- ERROR:
File "XXXX", line 5
    if ()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:23:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra=float(input("leia o preco sem desconto:"))
if (compra==200)
	mensagem= 
-- ERROR:
File "XXXX", line 5
    if (compra==200)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:25:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra=float(input("leia o preco sem desconto:"))
if (compra =< 200):
-- ERROR:
File "XXXX", line 5
    if (compra =< 200):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:25:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra=float(input("leia o preco sem desconto:"))
if (compra <= 200):
-- ERROR:
File "XXXX", line 6
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:26:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra=float(input("leia o preco sem desconto:"))
if (200 % 2):
-- ERROR:
File "XXXX", line 6
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 22:28:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra=float(input("leia o preco sem desconto:"))
valor= compra - 
-- ERROR:
File "XXXX", line 5
    valor= compra - 
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:11:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra=float(input("leia o preco sem desconto:"))
if (round(compra - (compra* 0.5) ,2)):
	mensagem= "leia o preco sem desconto"
else:
	mensagem="valor a ser pago"

-- ERROR:
File "XXXX", line 5
    valor= compra - 
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:15:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra=float(input("leia o preco sem desconto:"))
if (round(compra - (compra* 0.5) ,2)):
	mensagem= "leia o preco sem desconto"
else:
	mensagem="valor a ser pago"
print(mensagem)

-- OUTPUT:
leia o preco sem desconto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 00:19:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra=float(input("leia o preco sem desconto:"))
if (compra>=200)
	print(round(compra - (compra* 0.5) ,2))	
else:
	print(round(p,2))

-- EXECUTION TIME:
0.137876
-- ERROR:
  File "/home/codebench/codes/1643/869/main.py", line 5
    if (compra>=200)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:19:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra=float(input("leia o preco sem desconto:"))
if (compra>=200):
	print(round(compra - (compra* 0.5) ,2))	
else:
	print(round(p,2))

-- OUTPUT:
100.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:20:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra=float(input("leia o preco sem desconto:"))
if (compra>=200):
	print(round(compra - (compra* 0.05) ,2))	
else:
	print(round(p,2))

-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 00:20:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
compra=float(input("leia o preco sem desconto:"))
if (compra>=200):
	print(round(compra - (compra* 0.05) ,2))	
else:
	print(round(p,2))

-- EXECUTION TIME:
0.140343
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
